--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,6 +110,12 @@ body {
                 }
 
                 // Main-menu
+                .hamburger {
+                    background-color: transparent;
+                    border: 0;
+                    display: none;
+                }
+
                 .main-nav {
                     display: flex;
                     align-items: center;
@@ -523,15 +529,13 @@ body {
         padding-bottom: 5em;
 
         .gallery-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 0;
 
             .gallery-img {
+                padding: 1em 0;
 
                 .img {
                     position: relative;
-                    width: 353px;
+                    width: 100%;
                     height: 100%;
     
                     &::after {
@@ -668,7 +672,6 @@ body {
 
                 &:focus {
                   outline-width: 0;
-
                 }
             }
 
@@ -795,6 +798,646 @@ body {
 
                 img {
                     padding-right: .4em;
+                }
+            }
+        }
+    }
+}
+
+// Media Queries
+// Small Screens
+@media only screen and (max-width: 576px) {
+    // Header
+    #header {
+
+    // Language_Currency
+    .language-currency {
+
+        .dropdown {
+
+            .dropdown-menu {
+                position: relative;
+                transform: translate3d(-11em, 1.4em, 0px);
+                border: 1px solid #787878;
+                border-radius: 0;
+                padding: 0;
+                margin-top: 1em;
+            }
+        }
+    }
+
+        .logo-navbar {
+           
+            .navbar-container {
+
+                // Main-nav
+                .main-nav-container {
+                    flex-direction: column;
+                    text-align: center;
+
+                    .logo-container {
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+
+                            img {
+                                width: 200px;
+                                height: 100%;
+                            }
+
+                        .hamburger {
+                            display: block;
+                            margin-left: auto;
+                        }
+                    }
+
+                    .main-nav {
+                        display: block;
+                        flex-direction: column;
+                        opacity: 0;
+                        height: 0;
+
+                        .main-nav-item {
+                            padding-bottom: 1em;
+                        }
+                    }
+                }
+
+                // Right-Menu
+                .right-menu-container {
+
+                    .icon-container {
+                        justify-content: flex-start;
+                        
+                        li {
+                            margin: 0 2em 0 0;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
+    // Main
+    #main {
+
+        // Showcase Slider
+        #showcase {
+
+            #showcaseCarousel {
+
+                .carousel-inner {
+                    
+                    .carousel-item-first {
+
+                        .carousel-caption-first {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 1em;
+                            }
+
+                            .slider-text {
+                                display: none;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-second {
+
+                        .carousel-caption-second {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 1em;
+                            }
+
+                            .slider-text {
+                                display: none;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-third {
+
+                        .carousel-caption-third {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 1em;
+                            }
+
+                            .slider-text {
+                                display: none;
+                            }
+
+                            .pass-link {
+                                font-size: 0.6em;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+        // Arrival
+        #arrivals {
+
+            .arrival-container {
+
+                .owl-carousel {
+
+                    .arrival {
+
+                        .arrival-content {
+
+                            .title {
+                                margin-bottom: .6em;
+                            }
+
+                            .content {
+                                margin-bottom: 1em;
+                            }
+
+                            .pass-link {
+                                padding: .5em 2em;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        // Popular
+        #popular {
+
+            .popular-container {
+
+                .popular-card {
+                    margin-bottom: 2em;
+
+                    .popular-content {
+                        padding: 2em;
+                    }
+                }
+            }
+        }
+
+        // Quality
+        #quality {
+            flex-direction: column;
+
+            .quality-heading {
+                width: 100%;
+            }
+
+            .thumbnail {
+                width: 100%;
+            }
+        }
+
+        // Posts
+        #posts {
+
+            .posts-container {
+
+                .post-card {
+                    margin-bottom: 1em;
+
+                    .post-content {
+                        padding: 2em;
+                    }
+                }
+            }
+        }
+
+        // Subscribe
+        #subscribe {
+
+            .subscription-form {
+
+                .pass-link {
+                    margin-top: 1em;
+
+                }
+            }
+        }
+    }
+}
+
+// Medium Screens
+@media only screen and (max-width: 768px) {
+    // Header
+    #header {
+
+    // Language_Currency
+    .language-currency {
+
+        .dropdown {
+
+            .dropdown-menu {
+                position: relative;
+                transform: translate3d(-11em, 1.4em, 0px);
+                border: 1px solid #787878;
+                border-radius: 0;
+                padding: 0;
+                margin-top: 1em;
+            }
+        }
+    }
+
+        .logo-navbar {
+           
+            .navbar-container {
+
+                // Main-nav
+                .main-nav-container {
+                    flex-direction: column;
+                    text-align: center;
+
+                    .logo-container {
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+
+                            img {
+                                width: 200px;
+                                height: 100%;
+                            }
+
+                        .hamburger {
+                            display: block;
+                            margin-left: auto;
+                        }
+                    }
+
+                    .main-nav {
+                        display: block;
+                        flex-direction: column;
+                        opacity: 0;
+                        height: 0;
+
+                        .main-nav-item {
+                            padding-bottom: 1em;
+                        }
+                    }
+                }
+
+                // Right-Menu
+                .right-menu-container {
+
+                    .icon-container {
+                        justify-content: flex-start;
+                        
+                        li {
+                            margin: 0 2em 0 0;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // Main
+    #main {
+
+        // Showcase Slider
+        #showcase {
+
+            #showcaseCarousel {
+
+                .carousel-inner {
+                    
+                    .carousel-item-first {
+
+                        .carousel-caption-first {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-second {
+
+                        .carousel-caption-second {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-third {
+
+                        .carousel-caption-third {
+                            margin-bottom: 0;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 0.6em;
+                                padding: .7em 2em;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+        // Arrival
+        #arrivals {
+
+            .arrival-container {
+
+                .owl-carousel {
+
+                    .arrival {
+
+                        .arrival-content {
+
+                            .title {
+                                margin-bottom: .6em;
+                            }
+
+                            .content {
+                                margin-bottom: 1em;
+                            }
+
+                            .pass-link {
+                                padding: .5em 2em;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        // Popular
+        #popular {
+
+            .popular-container {
+
+                .popular-card {
+                    margin-bottom: 2em;
+
+                    .popular-content {
+                        padding: 2em;
+
+                        .pass-link {
+                            font-size: .7em;
+                        }
+                    }
+                }
+            }
+        }
+
+        // Quality
+        #quality {
+            flex-direction: column;
+
+            .quality-heading {
+                width: 100%;
+            }
+
+            .thumbnail {
+                width: 100%;
+            }
+        }
+
+        // Posts
+        #posts {
+
+            .posts-container {
+
+                .post-card {
+                    margin-bottom: 1em;
+
+                    .post-content {
+                        padding: 2em;
+                    }
+                }
+            }
+        }
+    }
+} 
+
+// Large Screen
+@media only screen and (max-width: 1024px) {
+    // Header
+    #header {
+
+        .logo-navbar {
+           
+            .navbar-container {
+
+                // Main-nav
+                .main-nav-container {
+                    flex-direction: column;
+                    text-align: center;
+
+                    .logo-container {
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+
+                            img {
+                                width: 200px;
+                                height: 100%;
+                            }
+
+                        .hamburger {
+                            display: block;
+                            margin-left: auto;
+                        }
+                    }
+
+                    .main-nav {
+                        display: block;
+                        flex-direction: column;
+                        opacity: 0;
+                        height: 0;
+
+                        .main-nav-item {
+                            padding-bottom: 1em;
+                        }
+                    }
+                }
+
+                // Right-Menu
+                .right-menu-container {
+                    .icon-container {
+                        justify-content: flex-start;
+                        
+                        li {
+                            margin: 0 2em 0 0;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // Main
+    #main {
+
+        // Showcase Slider
+        #showcase {
+
+            #showcaseCarousel {
+
+                .carousel-inner {
+                    
+                    .carousel-item-first {
+
+                        .carousel-caption-first {
+                            margin-bottom: 5em;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: 1em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-second {
+
+                        .carousel-caption-second {
+                            margin-bottom: 5em;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 10px;
+                                padding: 1em 2em;
+                            }
+                        }
+                    }
+
+                    .carousel-item-third {
+
+                        .carousel-caption-third {
+                            margin-bottom: 5em;
+
+                            .slider-header {
+                                font-size: 2em;
+                            }
+
+                            .pass-link {
+                                font-size: 0.6em;
+                                padding: 1em 2em;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+        // Arrival
+        #arrivals {
+
+            .arrival-container {
+
+                .owl-carousel {
+
+                    .arrival {
+
+                        .arrival-content {
+
+                            .title {
+                                margin-bottom: .6em;
+                            }
+
+                            .content {
+                                margin-bottom: 1em;
+                            }
+
+                            .pass-link {
+                                padding: .5em 2em;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        // Popular
+        #popular {
+
+            .popular-container {
+
+                .popular-card {
+                    margin-bottom: 2em;
+
+                    .popular-content {
+                        padding: 2em;
+
+                        .pass-link {
+                            font-size: .7em;
+                        }
+                    }
+                }
+            }
+        }
+
+        // Quality
+        #quality {
+            flex-direction: column;
+
+            .quality-heading {
+                width: 100%;
+            }
+
+            .thumbnail {
+                width: 100%;
+            }
+        }
+
+        // Posts
+        #posts {
+
+            .posts-container {
+
+                .post-card {
+                    margin-bottom: 1em;
+
+                    .post-content {
+                        padding: 2em;
+                    }
                 }
             }
         }
