--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -29,3 +29,20 @@ ul {
     margin-bottom: 1.5em;
 }
 
+.breadcrumb-section {
+    margin-bottom: 1em;
+    
+    li {
+        display: inline-block;
+        font-size: .8em;
+        color: $grey-color;
+
+        &:first-child::after {
+            content: ">";
+        }
+
+        a {
+            color: $grey-color;
+        }
+    }
+}
